[project]
name = "tolvera-book"
version = "0.1.0"
description = ""
authors = [
    {name = "agayushh",email = "agayush088@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "taichi (>=1.7.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
