[project]
name = "tolvera_sketch"
version = "0.1.0"
description = ""
authors = [
    {name = "agayushh",email = "agayush088@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "taichi (>=1.7.3,<2.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry.scripts]
tolvera_sketch = "main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
